# fmscrambler

./: .gitignore  .travis.yml  FM_CardScrambler.sln  FM_CardScrambler.sln.DotSettings  LICENSE  QUICKSTART.md  README.md  appveyor.yml  index.html
FMLib/: CMakeLists.txt  CMakeSettings.json  FMLib.csproj  packages.config
FMLib/Disc/: BinChunk.cs  CueFile.cs  Track.cs
FMLib/FMLib/: CMakeLists.txt
FMLib/FMLib/inc/: Data.h  DataReader.h  DiscPatcher.h  Export.h  FMLib.h
FMLib/FMLib/inc/Models/: Card.h  Duelist.h  Fusion.h  GameFile.h  Rank.h  Ritual.h  Starchips.h
FMLib/FMLib/src/: Data.cpp  DataReader.cpp  DiscPatcher.cpp  FMLib.cpp
FMLib/FMLib/src/Models/: Duelist.cpp  Fusion.cpp  Rank.cpp
FMLib/Models/: Card.cs  Duelist.cs  Fusion.cs  IsoFile.cs  Rank.cs  Ritual.cs  Starchips.cs
FMLib/Properties/: AssemblyInfo.cs
FMLib/Randomizer/: DataScrambler.cs  ImagePatcher.cs
FMLib/Utility/: CueFile.cs  ImagePatcher.cs  MainView.cs  Meta.cs  NumberHandler.cs  Static.cs  Track.cs  binchunk.cs
FMScrambler_Proto/: CharacterTable.txt  FMScrambler_Proto.csproj  Program.cs  fm_dialogue_uncleaned.txt
FMScrambler_Proto/Properties/: AssemblyInfo.cs
ScramblerNewUI/ScramblerNewUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScramblerNewUI.csproj  packages.config
ScramblerUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScramblerUI.csproj  packages.config
ScramblerUI/Model/: MainViewModel.cs
ScramblerUIPrism/: App.xaml  App.xaml.cs  Bootstrapper.cs  ScramblerUIPrism.csproj
docs/: README.md  _config.yml
(+26 files in other folders)
